fix gap between product cards

--- a/src/styles/shop.css
+++ b/src/styles/shop.css
@@ -81,6 +81,5 @@ button:hover {
 
 .products-container {
   display: grid;
-  /* grid-template-rows: repeat(auto-fill, 200px); */
-  grid-gap: 50px;
+  grid-gap: 20px;
 }
